*** 2.3.0 (2021-05-28)
    - Bronstein delay games with no initial time is now supported.

*** 2.2.1 (2021-02-07)
    - With Fischer delay, the extra time is now added at the end of player
      turns, instead of at the beginning.

*** 2.2.0 (2020-07-06)
    - Added an option to use a black background on the main game screen for
      potential power savings with OLED screens.

*** 2.1.2 (2019-05-30)
    - Fixed a bug causing player 1 to sometimes not receive the initial delay.
    - Fixed a bug causing some delays to be skipped after resuming a paused
      game.

*** 2.1.1 (2019-04-28)
    - New translation: Norwegian Bokmål.

*** 2.1.0 (2019-04-14)
    - Fixed an issue with clocks disappearing on Android 7.0 and above.
    - The minimum Android version was corrected to Android 5.0 and above, since
      SCC is using scalable vector graphics.
    - Material theme is now applied in menus and dialogs.

*** 2.0.0 (2019-03-24)
    - Major overhaul of the user interface.
    - Should now work on modern Android versions.

*** 1.2.0 (2010-11-28)
    - Added ability to move SCC to SD storage.

*** 1.1.3 (2010-11-21)
    - Fixed a bug that could cause a crash in certain situations (related to
      ringtone).

*** 1.1.2 (2010-11-06)
    - Fixed another bug. Leaving an option blank should no longer cause a crash
      – it will use the default value instead.

*** 1.1.1 (2010-11-06)
    - Addressed a crash on startup.

*** 1.1.0 (2010-09-27)
    - Added haptic feedback option.
    - Cleaned up some more code.

*** 1.0.3 (2010-09-24)
    - Changed the package name to conform to Google's naming standards.
    - First version available on the Market!

*** 1.0.2 (2010-09-13)
    - Fixed a bug that caused one clock to incorrectly continue running after
      "Reset Clocks" was used.
    - Made the app properly pause the game when Home or Back are used to exit.
    - Fixed the colouring of the clock text in cases where time dips below 60s